2004-06-12 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/gen.c (genPointerGet): added E_INTERNAL_ERROR for
	default case in switch statement,
	* glue.c (pic16_initPointer): expr is initialised via decoarteType
	to eliminate problem with initialisation of pointers, but problem
	still exists,
	* (pic16_pointerTypeToGPByte): removed, no needed for pic16,
	* (emitStaticSegment): removed various lines emitting debug info,
	* src/pic16/pcode.c, src/pic16/pcode.h, src/pic16/ralloc.h:
	added processor registers for utilizing EEPROM,
	* src/pic16/pcode.c (pic16_emitDB): number of DBs emitted is not
	configurable and set 8

2004-06-07 Vangelis Rokas <vrokas AT otenet.gr>

	* .version: increased version number to 2.4.2,

	Cumulative patch for pic16 port
	* src/pic16/device.c: changed scheme to dump initial values for
	variables in idata segment, all print_idata* functions were removed,
	now the pic16_printIval* will be called,
	* src/pic16/glue.c: (pic16_initPointer, pic16_pointerTypeToGPByte,
	* _pic16_printPointerType, pic16_printPointerType,
	* pic16_printGPointerType, pic16_printIvalArray, pic16_printIvalStruct,
	* pic16_printIvalBitFields, pic16_printIvalFuncPtr, pic16_printIvalPtr:
	NEW, similar to the respective functions in SDCCglue.c,
	* src/pic16/pcode.c (pic16_emitDB, pic16_flushDB): reverted to old
	way, emitting hex bytes,
	* (pic16_emitDS): NEW, emits a string for pointer initialisation,

2004-06-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/avr/ralloc.c (serialRegAssign),
	* src/xa51/ralloc.c (serialRegAssign),
	* src/pic/ralloc.c (serialRegAssign),
	* src/pic16/ralloc.c (serialRegAssign),
	* src/hc08/ralloc.c (serialRegAssign),
	* src/z80/ralloc.c (serialRegAssign),
	* src/ds390/ralloc.c (serialRegAssign),
	* src/mcs51/ralloc.c (serialRegAssign): fixed bug #964479
	
2004-06-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.c (geniCodeJumpTable): fixed bug #967601